--- a/project/templates/project/register.html
+++ b/project/templates/project/register.html
@@ -26,6 +26,15 @@
         <div class="form-group">
             <input type = "checkbox" name = "tutor">
         </div>
+        Choose a subscription plan:
+        <div class="form-group">
+            Free
+            <input type = "checkbox"><br>
+            $10 a month
+            <input type = "checkbox"><br>
+            $50 a month
+            <input type = "checkbox"><br>
+        </div>
         <input class="btn btn-primary" type="submit" value="Register">
     </form>
 
